--- a/Everstox.Infrastructure/Everstox.Infrastructure.csproj
+++ b/Everstox.Infrastructure/Everstox.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Polly" Version="7.2.2" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
