--- a/Everstox.API.Admin/Everstox.API.Admin.csproj
+++ b/Everstox.API.Admin/Everstox.API.Admin.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
   </ItemGroup>
 
