--- a/Everstox.API.Shop/Everstox.API.Shop.csproj
+++ b/Everstox.API.Shop/Everstox.API.Shop.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
   </ItemGroup>
 
