--- a/Everstox.API.Warehouses/Everstox.API.Warehouses.csproj
+++ b/Everstox.API.Warehouses/Everstox.API.Warehouses.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="RestSharp" Version="106.15.0" />
   </ItemGroup>
 
